card overflow bugfix

--- a/ccs-partials/components/card.css
+++ b/ccs-partials/components/card.css
@@ -9,6 +9,7 @@
   text-align: center;
 
   position: relative;
+  overflow: hidden;
 }
 
 .header p:not(:first-child) {
